2006-11-26 Benoit Grégoire  <bock@step.polymtl.ca>
	* lost_username.tpl, lost_password.tpl, resend_validation.tpl:  Fix #259 by commenting out
	all Javascript. I hate removing outside contributions, but the lost_username, 
	lost password and re-send validation email have been broken for months and no one 
	stepped-in to fix it.
	 
2006-11-23 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix bug in node creation
	* Add error message for geooder wwhen you didn't set the country
	* Clarify error messages and description for the geocoder.
	* Make the google-map locator for nodes use the network center coordinates.
	  This change makes it usable when you didn't use the geocoder first. 
	* Show the gateway id in the technical nodelist.
	
2006-11-22 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix minor problems with template using obsolete constants
	* Delete a bunch of unused templates
	
2006-11-22 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix broken auth
	* Fix broken portal when called from gateway
	
2006-11-22 Benoit Grégoire  <bock@step.polymtl.ca>
	* Major schema update (this one is going to make your database grind for a while, sorry
	about that...)
	Fix a long standing design problem with the node table, where the ID could be changed.  
	This caused performance problems when replacing gateways, and caused problems when
	exporting data to other systems.  Among other things, it will allow us to finally
	 finish the JiWire output.
	* Stylesheet.php:  New content type.  Takes advantage of two pass content display to create stylesheets to be used only at a specific node, or with a specific content.
	
2006-11-21 Benoit Grégoire  <bock@step.polymtl.ca>
	* Change schema update method.  Will now do one transaction
	 per schema version, allowing each schema to assume that
	  the current schema is the previous one.  Also allows not
	  starting over when there is a problem.
	  Fixes schema update problems with the last commit
	
2006-11-21 Benoit Grégoire  <bock@step.polymtl.ca>