@@ -96,7 +96,7 @@ class Content implements GenericObject {
      *
      * @return void
      */
-    private function __construct($content_id) {
+    protected function __construct($content_id) {
         
         $db = AbstractDb::getObject();
 
