@@ -86,7 +86,7 @@ class File extends Content
      *
      * @param string $content_id Content id
      */
-    public function __construct($content_id)
+    protected function __construct($content_id)
     {
         
         $db = AbstractDb::getObject();
