@@ -1,3 +1,8 @@
+2006-11-27 Benoit Grégoire  <bock@step.polymtl.ca>
+	* Try to fix #270: 
+	* DateTime.php:  Rename class to DateTimeWD because of the stunt they pulled in PHP 5.2
+	* Content and derived classes:  Make all constructors protected.
+
 2006-11-26 Benoit Grégoire  <bock@step.polymtl.ca>
 	* lost_username.tpl, lost_password.tpl, resend_validation.tpl:  Fix #259 by commenting out
 	all Javascript. I hate removing outside contributions, but the lost_username, 
